feat: add stats endpoint for accessing usage locations
