# src/infrastructure/telemetry/models/usage-density.projection.ts
@@ -1,0 +1,5 @@
+export interface UsageDensityStatsPointProjection {
+  longitude: number;
+  latitude: number;
+  count: number;
+}
